--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,4 +1,8 @@
 @import "./normalize.css";
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, Helvetica, sans-serif;
     user-select: none;
